# PseudoEdit3D

./: .gitignore  README.md  Test.md  pyproject.toml  train.py
configs/: aml_pattern_forest_v0_review_policy.json  label_schema.yaml  motion_pattern_text_targets.json  multi_atomic_preview.yaml  stage1_atomic_cmu_prefix20_clean.yaml  stage1_atomic_cmu_train.yaml  stage1_hybrid_upper_body.yaml  stage1_mined_cmu_hybrid.yaml  stage1_mined_cmu_program.yaml  stage1_mined_cmu_program_clean.yaml  stage1_mined_cmu_program_goal.yaml  stage1_mined_cmu_program_goal_clean.yaml  stage1_mined_cmu_train_prefix_goal_clean.yaml  stage1_mined_cmu_train_program_goal_clean.yaml  stage1_mined_cmu_train_startpose_goal_clean.yaml  stage1_mined_hybrid_upper_body.yaml  stage1_mined_upper_body.yaml  stage1_prefix_cmu_train_continue.yaml  stage1_prefix_cmu_train_semantic_continue.yaml  stage1_prefix_cmu_train_semantic_continue_v2.yaml  stage1_prefix_completion_cmu_futureonly.yaml  stage1_prefix_completion_cmu_futureonly_decoder_abs_micro.yaml  stage1_prefix_completion_cmu_futureonly_decoder_micro.yaml  stage1_prefix_completion_cmu_futureonly_structfix.yaml  stage1_prefix_completion_cmu_futureonly_structfix_micro.yaml  stage1_prefix_completion_cmu_futureonly_structfix_smoke.yaml  stage1_prefix_completion_cmu_futureplusactive.yaml  stage1_prefix_completion_cmu_futureplusactive_3ep.yaml  stage1_prefix_completion_cmu_futureplusactive_decoder_abs_micro.yaml  stage1_prefix_completion_cmu_futureplusactive_structfix.yaml  stage1_prefix_completion_cmu_reg_dynamics.yaml  stage1_prefix_completion_cmu_v1.yaml  (+12 more)
(+239 files in other folders)
